--- a/src/app/sites/mapa/mapa.component.html
+++ b/src/app/sites/mapa/mapa.component.html
@@ -1,5 +1,5 @@
 <div class="map-controls mb-3">
-    <div class="row">
+    <div class="row mt-3">
         <div class="col-md-4">
             <select class="form-select" [(ngModel)]="filterTestId" (change)="applyFilters()">
                 <option value="all">Todos los Estados del Caso</option>
