--- a/src/app/sites/select-test/select-test.component.html
+++ b/src/app/sites/select-test/select-test.component.html
@@ -16,6 +16,7 @@
     </ng-container>
 
     <ng-template #selectedTestTemplate>
+      <form [formGroup]="testForm">
         <div class="card mb-4">
             <div class="card-header bg-success text-white">
                 <h4 class="mb-0">Test Seleccionado: {{ selectedTest?.nombre }}</h4>
@@ -30,8 +31,9 @@
 
                     <div class="btn-group btn-group-toggle" data-toggle="buttons">
                         <label *ngFor="let alternativa of alternativas" class="btn btn-outline-primary">
-                            <input type="radio" name="pregunta{{ pregunta.id_pregunta }}"
-                                value="{{ alternativa.id_alternativa }}"> {{ alternativa.contenido }}
+                            <input type="radio" [name]="'pregunta' + pregunta.id_pregunta"
+                                [value]="alternativa.id_alternativa"
+                                [formControlName]="'pregunta' + pregunta.id_pregunta"> {{ alternativa.contenido }}
                         </label>
                     </div>
                 </div>
@@ -41,50 +43,6 @@
                 </div>
             </div>
         </div>
+      </form>
     </ng-template>
-
-    <div *ngIf="loading;" class="loading-overlay">
-        <div class="loading-content">
-            <div class="spinner-border text-primary" role="status"></div>
-            <div class="loading-message">
-                <p>Cargando preguntas</p>
-                <p>{{ counter }} de {{ preguntas.length }}</p>
-            </div>
-        </div>
-    </div>
-    <style>
-        .loading-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-        }
-        
-        .loading-content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background-color: white;
-            padding: 20px 30px;
-            border-radius: 20%;
-        }
-        
-        .spinner-border {
-            margin-bottom: 10px;
-        }
-        
-        .loading-message {
-            text-align: center;
-            color: black;
-        }
-    </style>
-
-
 </div>
