--- a/src/app/sites/vigilance/vigilance.component.html
+++ b/src/app/sites/vigilance/vigilance.component.html
@@ -174,6 +174,48 @@
             No hay tests registrados.
         </div>
     </ng-template>
+
+    <div *ngIf="loading;" class="loading-overlay">
+        <div class="loading-content">
+            <div class="spinner-border text-primary" role="status"></div>
+            <div class="loading-message">
+                <p>CARGANDO CONSIGNACIÓN</p>
+            </div>
+        </div>
+    </div>
+    <style>
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+        }
+        
+        .loading-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            background-color: white;
+            padding: 20px 30px;
+            border-radius: 20%;
+        }
+        
+        .spinner-border {
+            margin-bottom: 10px;
+        }
+        
+        .loading-message {
+            text-align: center;
+            color: black;
+        }
+    </style>
 </div>
 
 <style>
